k8s_onprem/k8s_gateways/http-route-frontend-deployment.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mf-http-route-account
  namespace: gloo-system
  labels:
    gateway: ms-gateway
spec:
  parentRefs:
    - name: ms-gateway
      namespace: gloo-system
      sectionName: ms-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mf-account
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: mf-account-upstream
          kind: Upstream
          group: gloo.solo.io

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mf-http-route-customer
  namespace: gloo-system
  labels:
    gateway: ms-gateway
spec:
  parentRefs:
    - name: ms-gateway
      namespace: gloo-system
      sectionName: ms-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mf-customer
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: mf-customer-upstream
          kind: Upstream
          group: gloo.solo.io

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mf-http-route-login
  namespace: gloo-system
  labels:
    gateway: ms-gateway
spec:
  parentRefs:
    - name: ms-gateway
      namespace: gloo-system
      sectionName: ms-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mf-login
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: mf-login-upstream
          kind: Upstream
          group: gloo.solo.io

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mf-http-route-transaction
  namespace: gloo-system
  labels:
    gateway: ms-gateway
spec:
  parentRefs:
    - name: ms-gateway
      namespace: gloo-system
      sectionName: ms-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mf-transaction
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: mf-transaction-upstream
          kind: Upstream
          group: gloo.solo.io
